// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStreamSecuritySelector component should hide derivative datastreams 1`] = `
<DocumentFragment>
  <h6
    class="MuiTypography-root MuiTypography-h6"
  />
  <div
    style="margin-top: 8px; padding: 16px;"
  >
    <div
      class="MuiGrid-root DataStreamSecuritySelector-dataStreamFileBlock-721 dataStreamFileBlock MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-flex-start MuiGrid-align-content-xs-flex-end"
    >
      <div
        class="MuiGrid-root DataStreamSecuritySelector-dataStreamFileName-722 dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
          title="testA.txt"
        >
          testA.txt
        </a>
        <br />
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          Overridden
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
      >
        <div
          class="MuiFormControl-root"
          style="width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-required Mui-required"
            data-shrink="false"
            id="dsi-security-policy-0-label"
          >
            Override datastream security policy
            <span
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            required=""
            validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="dsi-security-policy-0-select"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              data-testid="dsi-security-policy-0-select"
              id="dsi-security-policy-0-select"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-labelledby="dsi-security-policy-0-label"
              data-testid="dsi-security-policy-0-input"
              id="dsi-security-policy-0-input"
              name="testA.txt"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecuritySelector component should not display datastream security selected in dropdown 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`DataStreamSecuritySelector component should render default view 1`] = `
<DocumentFragment>
  <h6
    class="MuiTypography-root MuiTypography-h6"
  />
  <div
    style="margin-top: 8px; padding: 16px;"
  >
    <div
      class="MuiGrid-root DataStreamSecuritySelector-dataStreamFileBlock-1 dataStreamFileBlock MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-flex-start MuiGrid-align-content-xs-flex-end"
    >
      <div
        class="MuiGrid-root DataStreamSecuritySelector-dataStreamFileName-2 dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
          title="test4.txt"
        >
          test4.txt
        </a>
        <br />
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          Overridden
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
      >
        <div
          class="MuiFormControl-root"
          style="width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled Mui-required Mui-required"
            data-shrink="true"
            id="dsi-security-policy-0-label"
          >
            Override datastream security policy
            <span
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            required=""
            validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="dsi-security-policy-0-select"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              data-testid="dsi-security-policy-0-select"
              id="dsi-security-policy-0-select"
              role="button"
              tabindex="0"
            >
              Administrators
            </div>
            <input
              aria-labelledby="dsi-security-policy-0-label"
              data-testid="dsi-security-policy-0-input"
              id="dsi-security-policy-0-input"
              name="test4.txt"
              type="hidden"
              value="1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecuritySelector component should show non-derivative datastreams 1`] = `
<DocumentFragment>
  <h6
    class="MuiTypography-root MuiTypography-h6"
  />
  <div
    style="margin-top: 8px; padding: 16px;"
  >
    <div
      class="MuiGrid-root DataStreamSecuritySelector-dataStreamFileBlock-941 dataStreamFileBlock MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-flex-start MuiGrid-align-content-xs-flex-end"
    >
      <div
        class="MuiGrid-root DataStreamSecuritySelector-dataStreamFileName-942 dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
          title="test9.txt"
        >
          test9.txt
        </a>
        <br />
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
          Overridden
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
      >
        <div
          class="MuiFormControl-root"
          style="width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-required Mui-required"
            data-shrink="false"
            id="dsi-security-policy-0-label"
          >
            Override datastream security policy
            <span
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
            required=""
            validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="dsi-security-policy-0-select"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              data-testid="dsi-security-policy-0-select"
              id="dsi-security-policy-0-select"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-labelledby="dsi-security-policy-0-label"
              data-testid="dsi-security-policy-0-input"
              id="dsi-security-policy-0-input"
              name="test9.txt"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSelect-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
